--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -28,6 +28,10 @@ code {
   height: 100%;
 }
 
+#root > div > div > div {
+  min-height: 100%;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
